--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -3,21 +3,18 @@ on:
   push:
     branches:
       - master
+      - main
     paths:
-      - 'wr941nd.config'
-  schedule:
-    - cron: 40 15,18 * * 2,4,6
-  watch:
-    types: started
+      - '*.deb'
 
 env:
   DIST: sh23
   MORE: --keepunusednewfiles
-  SSH: false
-  LOCAL_KEY: true
+  SSH: 'false'
+  LOCAL_KEY: 'true'
   PRIV_KEY: priv.key
   PUB_KEY: pub.key
-  PUB_KEY_ID: 
+  KEY_ID: 7E1D5D0188BFB69346C6332659CEA38B2E8E4EBE
 
 jobs:
   reprepro:
@@ -29,7 +26,7 @@ jobs:
         # with:
         #   persist-credentials: false
 
-      - name: Instalando depedencias
+      - name: Install reprepro and OpenGPG
         env:
           DEBIAN_FRONTEND: noninteractive
         run : |
@@ -43,9 +40,9 @@ jobs:
       - name: import gpg keys
         if: env.LOCAL_KEY == 'true'
         run: |
-          gpg --import "$WORKDIR_SH23/keys/$PRIV_KEY"
           gpg --import "$WORKDIR_SH23/keys/$PUB_KEY"
-          echo "default-key $PUB_KEY_ID" >> ~/.gnupg/gpg.conf
+          gpg --allow-secret-key-import --import "$WORKDIR_SH23/keys/$PRIV_KEY"
+          echo "default-key $KEY_ID" >> ~/.gnupg/gpg.conf
 
       - name: Reprepro
         run: |
@@ -55,9 +52,8 @@ jobs:
           if [[ -e  $PUB_KEY ]];then
           echo ""
           else
-          gpg --armor --output "$WORKDIR_SH23/public/pub.key" --export $PUB_KEY_ID
+          gpg --armor --output "$WORKDIR_SH23/public/pub.key" --export $KEY_ID
           fi
-
 
       - name: removendo algumas pastas
         run: |
@@ -68,5 +64,5 @@ jobs:
       - name: Deploy repository
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.SECRETS }}
           publish_dir: ${{ env.WORKDIR_SH23 }}/public
