--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -26,7 +26,7 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run : |
-          sudo apt update && apt install -fy && apt install -y reprepro rng-tools
+          sudo apt update -qq && apt install -qqfy && sudo apt install -yqq reprepro rng-tools
           echo "::set-env name=WORKDIR_SH23::$(pwd)"
 
       - name: GPG key create
