--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -19,10 +19,8 @@ jobs:
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.1 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
-        # with:
-        #   persist-credentials: false
-
+        uses: actions/checkout@v2.3.1
+        
       - name: Install reprepro and OpenGPG
         run : |
           sudo apt update -qq
