--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -36,7 +36,7 @@ jobs:
         if: env.LOCAL_KEY == 'true'
         run: |
           gpg --import "$WORKDIR_SH23/keys/$PUB_KEY"
-          gpg --quiet --yes --passphrase ${{ secrets.PASSWORD }} --output "$WORKDIR_SH23/keys/$PRIV_KEY"
+          gpg --yes --passphrase ${{ secrets.PASSWORD }} --import "$WORKDIR_SH23/keys/$PRIV_KEY"
           echo "default-key $KEY_ID" >> ~/.gnupg/gpg.conf
 
       - name: Reprepro
