--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -35,8 +35,9 @@ jobs:
       - name: import gpg keys
         if: env.LOCAL_KEY == 'true'
         run: |
+          gpg --passphrase "${{ secrets.PASSWORD }}" --import "$WORKDIR_SH23/keys/$PRIV_KEY"
+          echo "" 
           gpg --import "$WORKDIR_SH23/keys/$PUB_KEY"
-          gpg --yes --passphrase ${{ secrets.PASSWORD }} --import "$WORKDIR_SH23/keys/$PRIV_KEY"
           echo "default-key $KEY_ID" >> ~/.gnupg/gpg.conf
 
       - name: Reprepro
