--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -8,7 +8,7 @@ on:
 env:
   DIST: pages
   MORE: --keepunusednewfiles
-  LOCAL_KEY: 'true'
+  LOCAL_KEY: 'false'
   PUB_KEY: pub.key
   PRIV_KEY: priv.key
   KEY_ID: 7E1D5D0188BFB69346C6332659CEA38B2E8E4EBE
