--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -42,11 +42,11 @@ jobs:
       - name: list publish_dir
         run: |
           echo "seu diretorio de trabalho é no: $WORKDIR_SH23"
-          ls "$WORKDIR_SH23/
-          ls "$WORKDIR_SH23/package/
-          ls "$WORKDIR_SH23/package/main/
-          ls "$WORKDIR_SH23/package/contrib/
-          ls "$WORKDIR_SH23/package/non-free/
+          ls "$WORKDIR_SH23/"
+          ls "$WORKDIR_SH23/package/"
+          ls "$WORKDIR_SH23/package/main/"
+          ls "$WORKDIR_SH23/package/contrib/"
+          ls "$WORKDIR_SH23/package/non-free/"
 
       - name: Reprepro
         run: |
