--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -44,11 +44,10 @@ jobs:
       - name: Reprepro
         run: |
           cd public/
-          sudo reprepro $MORE --verbose -C main includedeb $DIST "$WORKDIR_SH23/package/main/*.deb"
-          sudo reprepro $MORE --verbose -C contrib includedeb $DIST "$WORKDIR_SH23/package/contrib/*.deb"
-          sudo reprepro $MORE --verbose -C non-free includedeb $DIST "$WORKDIR_SH23/package/non-free/*.deb"
+          sudo reprepro $MORE --verbose -C main includedeb $DIST $WORKDIR_SH23/package/main/*.deb
+          sudo reprepro $MORE --verbose -C contrib includedeb $DIST $WORKDIR_SH23/package/contrib/*.deb
+          sudo reprepro $MORE --verbose -C non-free includedeb $DIST $WORKDIR_SH23/package/non-free/*.deb
           gpg --armor --output "pub.key" --export $KEY_ID
-          # bash start.sh
 
       - name: removendo algumas pastas
         run: |
