--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -25,16 +25,16 @@ jobs:
 
       - name: Install reprepro and OpenGPG
         run : |
-          sudo apt update -qq
-          sudo DEBIAN_FRONTEND=noninteractive apt install -y reprepro rng-tools gpg*
+          apt update -qq
+          DEBIAN_FRONTEND=noninteractive apt install -y reprepro rng-tools gpg*
           echo "::set-env name=WORKDIR_SH23::$(pwd)"
           
       - name: import gpg keys
         if: env.LOCAL_KEY == 'true'
         run: |
-          gpg --passphrase "${{ secrets.PASSWORD }}" --no-tty --batch --yes --import "$WORKDIR_SH23/keys/$PRIV_KEY"
+          gpg --passphrase "${{ secrets.PASSWORD }}" --no-tty --batch --yes --import "keys/$PRIV_KEY"
           echo "" 
-          gpg --import "$WORKDIR_SH23/keys/$PUB_KEY"
+          gpg --import "keys/$PUB_KEY"
           echo "default-key $KEY_ID" >> ~/.gnupg/gpg.conf
           echo use-agent >> ~/.gnupg/gpg.conf
           echo "pinentry-mode loopback" >> ~/.gnupg/gpg.conf
