--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -34,7 +34,8 @@ jobs:
           export GPG_TTY=$(tty)
           gpg --passphrase "${{ secrets.PASSWORD }}" --no-tty --batch --yes --import "keys/$PRIV_KEY"
           gpg --import "keys/$PUB_KEY"
-          gpg --export-secret-keys --passphrase "${{ secrets.PASSWORD }}" --no-tty --batch --yes | gpg2 --passphrase "${{ secrets.PASSWORD }}" --no-tty --batch --yes --import -
+          gpg2 --passphrase "${{ secrets.PASSWORD }}" --no-tty --batch --yes --import "keys/$PRIV_KEY"
+          gpg2 --import "keys/$PUB_KEY"
           echo "default-key $KEY_ID" >> ~/.gnupg/gpg.conf
           echo use-agent >> ~/.gnupg/gpg.conf
 
